[chore] Upgrade Gradle to 5.5.1, update dependencies.